--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -30,7 +30,8 @@ jobs:
             ${{ runner.os }}-maven-
 
       - name: Build & Run Tests
-        run: ./mvnw clean verify
+        run: mvn clean verify
+
 
   docker-build:
     runs-on: ubuntu-latest
