--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,8 +1,5 @@
-global:
-  scrape_interval: 5s
-
 scrape_configs:
   - job_name: 'spring-boot'
     metrics_path: '/actuator/prometheus'
     static_configs:
-      - targets: ['host.docker.internal:8080']   # your Notes API running locally
+      - targets: ['notes-api:8080']
